--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -6,10 +6,12 @@
 %table#movies
 	%thead
 		%tr
-			%th{:class=> @sortid=='title' ? 'hilite' : ''}= link_to "Movie Title", movies_path({:sortid=>'title'}), {:id=>"title_header"} #if title sort requested color set to hilite
+			%th{:class=> @sortid=='title' ? 'hilite' : ''}
+				%a= link_to "Movie Title", movies_path({:sortid=>'title'}), {:id=>"title_header"} #if title sort requested color set to hilite
 
 			%th Rating
-			%th{:class=> @sortid == 'release_date' ? 'hilite' : ''}= link_to "Release Date", movies_path({:sortid=>'release_date'}), {:id=>"release_date_header"} #if rd sort requested color set to hilite
+			%th{:class=> @sortid == 'release_date' ? 'hilite' : ''}
+				%a= link_to "Release Date", movies_path({:sortid=>'release_date'}), {:id=>"release_date_header"} #if rd sort requested color set to hilite
 
 			%th More Info
 	%tbody
