--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,7 +1,12 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
-
+=form_tag movies_path, :method => :get do
+	Include:
+	- @all_ratings.each do |rating| #iterate through all ratings given by controller
+		= rating
+		= check_box_tag "ratings[#{rating}]", "ratings[#{rating}]", @ratings.nil? ? false : @ratings.has_key?(rating) #save the old ratings chosen and set include all ratings if no boxes checked
+	= submit_tag 'Refresh', {:id => 'ratings_submit'}
 
 %table#movies
 	%thead
